--- a/dapp/package.json
+++ b/dapp/package.json
@@ -23,6 +23,11 @@
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+
+    "@mysten/bcs": "^0.7.2",
+    "@mysten/kiosk": "^0.5.1",
+    "@mysten/sui.js": "^0.34.1",
+
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
