--- a/dapp/package.json
+++ b/dapp/package.json
@@ -22,6 +22,7 @@
     "jotai": "^2.4.2",
     "lodash": "^4.17.21",
     "next": "^13.2.4",
+    "postcss-px-to-viewport": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
@@ -35,7 +36,7 @@
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "postcss": "^8.4.14",
