--- a/dapp/package.json
+++ b/dapp/package.json
@@ -26,6 +26,7 @@
     "postcss-px-to-viewport": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swiper": "^11.0.3",
     "tailwind-merge": "^1.14.0",
     "tweetnacl": "^1.0.3",
     "yarn": "^1.22.19"
