--- a/landing-page/package.json
+++ b/landing-page/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/canvas-confetti": "^1.6.1",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
