--- a/dapp/package.json
+++ b/dapp/package.json
@@ -23,6 +23,7 @@
     "jotai": "^2.4.2",
     "lodash": "^4.17.21",
     "next": "^13.2.4",
+    "next-i18next": "^15.2.0",
     "postcss-px-to-viewport": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
