--- a/dapp/package.json
+++ b/dapp/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.0",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^1.0.6",
@@ -20,6 +20,7 @@
     "canvas-confetti": "^1.6.0",
     "ethos-connect": "^0.0.185",
     "framer-motion": "^10.16.4",
+    "i18next": "^23.10.1",
     "jotai": "^2.4.2",
     "lodash": "^4.17.21",
     "next": "^13.2.4",
@@ -27,15 +28,16 @@
     "postcss-px-to-viewport": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "swiper": "^11.0.3",
     "tailwind-merge": "^1.14.0",
     "tweetnacl": "^1.0.3",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@mysten/bcs": "^0.7.2",
+    "@mysten/bcs": "^0.7.3",
     "@mysten/kiosk": "^0.5.1",
-    "@mysten/sui.js": "^0.34.1",
+    "@mysten/sui.js": "^0.41.1",
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
