--- a/dapp/package.json
+++ b/dapp/package.json
@@ -23,7 +23,7 @@
     "i18next": "^23.10.1",
     "jotai": "^2.4.2",
     "lodash": "^4.17.21",
-    "next": "^13.2.4",
+    "next": "14.0.3",
     "next-i18next": "^15.2.0",
     "postcss-px-to-viewport": "^1.1.1",
     "react": "^18.2.0",
